--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@emotion/styled": "^11.11.5",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
-    "react-router-dom": "^6.22.3"
+    "react-icons": "^5.1.0",
+    "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
