--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.5",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.1.3",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-google-charts": "^4.0.1",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5"
   },
