--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@microsoft/signalr": "^8.0.7",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
     "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.1.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
